examples/errors/types/Username.tsb
struct Username {
  #[minLength(3), maxLength(20), pattern("^[a-zA-Z0-9_]+$")]
  value: string,
}
